# bevy-2048

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
.github/workflows/: ci.yml  release.yml  web.yml
src/: asset_loader.rs  board.rs  borad.rs  button.rs  camera.rs  fps.rs  game.rs  input.rs  lib.rs  main.rs  render.rs  schedule.rs  score.rs  state.rs  tiles.rs  ui.rs
src/asset_loader/: fonts.rs  icons.rs  mod.rs
src/color/: board.rs  button.rs  mod.rs  score.rs  tile.rs
src/tiles/: mod.rs  shift.rs  spawn.rs
src/ui/: game.rs  mod.rs  paused_menu.rs  splash.rs
